feat: Add the get all inventions endpoint and documentation
